[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Part.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Node2D.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23, 10.9667 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.503704, 1 )
colors = PoolColorArray( 0.982605, 1, 0.109375, 1, 1, 0.237793, 0.125, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_random = 0.3
color_ramp = SubResource( 5 )
hue_variation = 0.09
hue_variation_random = 0.67

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 2.19259, 3.53222 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 2.62592, 2.96572 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PoolVector2Array( -16, -16, 16, -16, 16, 16, -16, 16 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 7, 0 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Polygon2D" type="Polygon2D" parent="Node2D"]
material = SubResource( 2 )
position = Vector2( 123.333, 0 )
scale = Vector2( 0.444444, 1 )
color = Color( 0.372549, 0.721569, 0.74902, 1 )
polygon = PoolVector2Array( -277.5, 0, -151.5, -8, -151.5, -16, -133.5, 0, -151.5, 16, -151.5, 8 )

[node name="Polygon2D2" type="Polygon2D" parent="Node2D"]
visible = false
material = SubResource( 2 )
position = Vector2( 57.3333, 0 )
scale = Vector2( 0.444444, 1 )
color = Color( 0.964706, 0.156863, 0.0470588, 1 )
polygon = PoolVector2Array( -129, 0, -1, -8, -1, -16, 15, 0, -1, 16, -1, 8 )

[node name="Line2D" type="Line2D" parent="Node2D"]
z_index = -1
points = PoolVector2Array( 0, 0, 900, 0 )
width = 2.0
default_color = Color( 0.756863, 0.760784, 0.760784, 0.352941 )
joint_mode = 2

[node name="Area2D" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D"]
position = Vector2( 43, 0 )
shape = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 20
one_shot = true
explosiveness = 1.0
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="KillArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
position = Vector2( 0.250343, 21.004 )
shape = SubResource( 7 )

[node name="KillArea2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea2"]
position = Vector2( 0.323532, -20.6513 )
shape = SubResource( 8 )

[node name="FlyTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="body_entered" from="Node2D/Area2D" to="Node2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D" to="Node2D" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="KillArea" to="." method="_on_KillArea_body_entered"]
[connection signal="body_entered" from="KillArea2" to="." method="_on_KillArea2_body_entered"]
[connection signal="timeout" from="FlyTimer" to="." method="_on_FlyTimer_timeout"]
